# rcc

./: .gitignore  Cargo.toml  README.md  flake.nix
crates/rcc_arena/: Cargo.toml
crates/rcc_arena/src/: lib.rs  vec.rs
crates/rcc_asm/: Cargo.toml
crates/rcc_asm/src/: asm_impl.rs  lib.rs  regs.rs
crates/rcc_ast/: Cargo.toml
crates/rcc_ast/src/: ast.rs  ast_builder.rs  ast_impl.rs  lib.rs  visit.rs  visit_mut.rs
crates/rcc_ast_lowering/: Cargo.toml
crates/rcc_ast_lowering/src/: instrs.rs  lib.rs  switch.rs
crates/rcc_cli/: Cargo.toml
crates/rcc_codeemit/: Cargo.toml
crates/rcc_codeemit/src/: lib.rs
crates/rcc_codegen/: Cargo.toml
crates/rcc_codegen/src/: instrs.rs  lib.rs
crates/rcc_driver/: Cargo.toml
crates/rcc_driver/src/: main.rs
crates/rcc_interner/: Cargo.toml
crates/rcc_interner/src/: lib.rs
crates/rcc_lexer/: Cargo.toml
crates/rcc_lexer/src/: lexer.rs  lib.rs  token.rs
crates/rcc_parser/: Cargo.toml
crates/rcc_parser/src/: diagnostics.rs  fold.rs  lib.rs
crates/rcc_semantics/: Cargo.toml
crates/rcc_semantics/src/: diagnostics.rs  labels.rs  lib.rs  loops.rs
crates/rcc_span/: Cargo.toml
crates/rcc_span/src/: lib.rs
crates/rcc_tac/: Cargo.toml
crates/rcc_tac/src/: lib.rs  tac_impl.rs
crates/rcc_tests/: Cargo.toml
crates/rcc_tests/tests/: invalid_at_sign.snap  invalid_bitwise_double_pipe.snap  invalid_break_not_in_loop  invalid_break_not_in_loop.s  invalid_break_not_in_loop.snap  invalid_case_outside_of_switch.snap  invalid_compound_initializer.snap  invalid_continue_in_switch  invalid_continue_in_switch.c  invalid_continue_in_switch.s  invalid_continue_in_switch.snap  invalid_continue_not_in_loop.s  invalid_continue_not_in_loop.snap  invalid_declaration_as_statement.snap  invalid_declare_keyword_as_var.snap  invalid_default_outside_switch.snap  invalid_double_operation.snap  invalid_duplicate_case_label.c  invalid_duplicate_case_label.snap  invalid_duplicate_labels.s  invalid_duplicate_labels.snap  invalid_empty_if_body.snap  invalid_extra_paren.snap  invalid_function_name.snap  invalid_goto_missing_label.snap  invalid_goto_without_label.snap  invalid_incomplete_ternary.snap  invalid_increment_declaration.snap  invalid_keyword_wrong_case.snap  invalid_label_without_statement.snap  invalid_labeled_declaration.snap  invalid_lvalue.snap  invalid_malformed_ternary.snap  invalid_missing_const.snap  invalid_missing_first_operand.snap  invalid_missing_second_operand.snap  invalid_missing_semicolon.snap  invalid_missing_type.snap  invalid_missplaced_semicolon.snap  invalid_multiple_default_labels  (+121 more)
samples/: assign.c  bitwise2.c  logical.c  neg.c  parens.c  relational.c  typedef.c
