[package]
name = "rcc_driver"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rcc"
path = "src/main.rs"

[dependencies]
rcc_arena        = { workspace = true }
rcc_ast_lowering = { workspace = true }
rcc_codeemit     = { workspace = true }
rcc_codegen      = { workspace = true }
rcc_interner     = { workspace = true }
rcc_lexer        = { workspace = true }
rcc_parser       = { workspace = true }

clap = { workspace = true }
